Closed
Bug 1275948
Opened 9 years ago
Closed 7 years ago
Crash [@ nsMsgMaildirStore::GetNewMsgOutputStream]
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(thunderbird_esr6062+ verified, thunderbird63 fixed)
VERIFIED
FIXED
Thunderbird 63.0
People
(Reporter: rkent, Assigned: mkmelin)
References
(Blocks 1 open bug, )
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.11 KB,
patch
|
jorgk-bmo
:
review+
jorgk-bmo
:
approval-comm-esr60+
|
Details | Diff | Splinter Review |
This is another null database error, in this case with an NS_ERROR check that does nothing in release builds.
Comment 1•9 years ago
|
||
bp-768755f4-b03b-4bfd-973b-d16b72160525
0 xul.dll nsMsgMaildirStore::GetNewMsgOutputStream(nsIMsgFolder*, nsIMsgDBHdr**, bool*, nsIOutputStream**) c:/builds/moz2_slave/tb-rel-c-esr45-w32_bld-0000000/build/mailnews/local/src/nsMsgMaildirStore.cpp:599
1 xul.dll nsMsgDBFolder::GetMsgStore(nsIMsgPluggableStore**) c:/builds/moz2_slave/tb-rel-c-esr45-w32_bld-0000000/build/mailnews/base/util/nsMsgDBFolder.cpp:743
2 xul.dll nsMsgLocalMailFolder::InitCopyMsgHdrAndFileStream() c:/builds/moz2_slave/tb-rel-c-esr45-w32_bld-0000000/build/mailnews/local/src/nsLocalMailFolder.cpp:2100
Keywords: crash
Updated•9 years ago
|
Blocks: maildirblockers
Comment 2•8 years ago
|
||
Pretty rare, but of course maildir is not the default
Comment 3•7 years ago
|
||
Now less rare. But frame 1 has changed to nsMsgLocalMailFolder::InitCopyMsgHdrAndFileStream.
For example 60.0b4 bp-a36ac7e3-26a8-4808-87b7-f21220180424
0 xul.dll nsMsgMaildirStore::GetNewMsgOutputStream(nsIMsgFolder*, nsIMsgDBHdr**, bool*, nsIOutputStream**) C:/builds/moz2_slave/tb-rel-c-beta-w32_bld-00000000/build/mailnews/local/src/nsMsgMaildirStore.cpp:599
1 xul.dll nsMsgLocalMailFolder::InitCopyMsgHdrAndFileStream() C:/builds/moz2_slave/tb-rel-c-beta-w32_bld-00000000/build/mailnews/local/src/nsLocalMailFolder.cpp:2121
2 xul.dll nsMsgLocalMailFolder::BeginCopy(nsIMsgDBHdr*) C:/builds/moz2_slave/tb-rel-c-beta-w32_bld-00000000/build/mailnews/local/src/nsLocalMailFolder.cpp:2140
3 xul.dll nsCopyMessageStreamListener::OnStartRequest(nsIRequest*, nsISupports*) C:/builds/moz2_slave/tb-rel-c-beta-w32_bld-00000000/build/mailnews/base/src/nsCopyMessageStreamListener.cpp:101
4 xul.dll mozilla::net::nsStreamListenerTee::OnStartRequest(nsIRequest*, nsISupports*) netwerk/base/nsStreamListenerTee.cpp:22
5 xul.dll `anonymous namespace'::SyncRunnable2<nsIImapMailFolderSink, nsIMsgMailNewsUrl*, unsigned int>::Run C:/builds/moz2_slave/tb-rel-c-beta-w32_bld-00000000/build/mailnews/imap/src/nsSyncRunnableHelpers.cpp:147
Comment 4•7 years ago
|
||
#77 crash for version 60.
bp-007ef6f3-922a-427f-a187-bd7750180815 (some user) clicked Archive
bp-eb157b91-27c7-4b85-9034-6cb280180815 (some user) Sending a new email via LIghtning Event creation (technically edit) I believe the issue is I haven't opened the Sent folder yet and it crashes. A similar thing happened when I was trying to Archive but hadn't yet opened the 2018 archive for the first time. Installation was standard but a profile and all related prefs were put in prior to first start.
Flags: needinfo?(m_kato)
| Assignee | ||
Comment 5•7 years ago
|
||
Doens't help to only output an error message when there's no db...
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Flags: needinfo?(m_kato)
Attachment #9003399 -
Flags: review?(jorgk)
Comment 6•7 years ago
|
||
Comment on attachment 9003399 [details] [diff] [review]
bug1275948_maildir_no_db_crash.patch
Review of attachment 9003399 [details] [diff] [review]:
-----------------------------------------------------------------
::: mailnews/local/src/nsMsgMaildirStore.cpp
@@ +587,5 @@
> *aReusable = false; // message per file
>
> nsCOMPtr<nsIMsgDatabase> db;
> aFolder->GetMsgDatabase(getter_AddRefs(db));
> + NS_ENSURE_STATE(db);
How about some error checking instead?
| Assignee | ||
Comment 7•7 years ago
|
||
I think Kent didn't use to trust that for this case. But either way is fine by me.
| Assignee | ||
Comment 8•7 years ago
|
||
Checking rv instead
Attachment #9003399 -
Attachment is obsolete: true
Attachment #9003399 -
Flags: review?(jorgk)
Attachment #9004258 -
Flags: review?(jorgk)
Comment 9•7 years ago
|
||
Comment on attachment 9004258 [details] [diff] [review]
bug1275948_maildir_no_db_crash.patch
Thanks, I think that's the way to go.
Attachment #9004258 -
Flags: review?(jorgk)
Attachment #9004258 -
Flags: review+
Attachment #9004258 -
Flags: approval-comm-esr60+
Comment 10•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/64f649a0558a
fix crash in nsMsgMaildirStore::GetNewMsgOutputStream(). r=jorgk
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Target Milestone: --- → Thunderbird 63.0
Comment 11•7 years ago
|
||
TB 60.1 ESR:
https://hg.mozilla.org/releases/comm-esr60/rev/a649556d8629f4906e0829695a25720ae6d2f72e
status-thunderbird63:
--- → fixed
status-thunderbird_esr60:
--- → fixed
Comment 12•7 years ago
|
||
Updated•7 years ago
|
tracking-thunderbird_esr60:
--- → 61+
Updated•7 years ago
|
Comment 13•7 years ago
|
||
v.fixed - No crashes in 64.0beta and newer versions of 60.n
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•