Bug 1275948 - fix crash in nsMsgMaildirStore::GetNewMsgOutputStream(). r=jorgk